Implement vehicle routes
